--- a/global.css
+++ b/global.css
@@ -4,52 +4,54 @@
 
 @layer base {
   :root {
-    --background: #FFFFFF;
-    --purple-primary: #6365F2; /* aproximado a partir de hsl(239, 85%, 67%) */
-    --foreground: #09090B; /* aproximado a partir de 240 10% 3.9% */
-    --card: #FFFFFF; /* 0 0% 100% */
-    --card-foreground: #09090B; /* 240 10% 3.9% */
-    --popover: #FFFFFF; /* 0 0% 100% */
-    --popover-foreground: #09090B; /* 240 10% 3.9% */
-    --primary: #18181B; /* aproximado a partir de 240 5.9% 10% */
-    --primary-foreground: #FAFAFA; /* 0 0% 98% */
-    --secondary: #F4F4F5; /* aproximado a partir de 240 4.8% 95.9% */
-    --secondary-foreground: #18181B; /* 240 5.9% 10% */
-    --muted: #F4F4F5; /* 240 4.8% 95.9% */
-    --muted-foreground: #71717A; /* aproximado a partir de 240 3.8% 46.1% */
-    --accent: #F4F4F5; /* 240 4.8% 95.9% */
-    --accent-foreground: #18181B; /* 240 5.9% 10% */
-    --destructive: #EF4444; /* aproximado a partir de 0 84.2% 60.2% */
-    --destructive-foreground: #FAFAFA; /* 0 0% 98% */
-    --border: #E4E4E7; /* aproximado a partir de 240 5.9% 90% */
-    --input: #F3F3F3; /* 240 5.9% 90% */
-    --ring: #18181B; /* 240 5.9% 10% */
+    --background: #ffffff;
+    --purple-primary: #6365f2; /* aproximado a partir de hsl(239, 85%, 67%) */
+    --foreground: #09090b; /* aproximado a partir de 240 10% 3.9% */
+    --card: #ffffff; /* 0 0% 100% */
+    --card-foreground: #09090b; /* 240 10% 3.9% */
+    --popover: #ffffff; /* 0 0% 100% */
+    --popover-foreground: #09090b; /* 240 10% 3.9% */
+    --primary: #18181b; /* aproximado a partir de 240 5.9% 10% */
+    --primary-foreground: #fafafa; /* 0 0% 98% */
+    --secondary: #f4f4f5; /* aproximado a partir de 240 4.8% 95.9% */
+    --secondary-foreground: #18181b; /* 240 5.9% 10% */
+    --muted: #f4f4f5; /* 240 4.8% 95.9% */
+    --muted-foreground: #71717a; /* aproximado a partir de 240 3.8% 46.1% */
+    --accent: #f4f4f5; /* 240 4.8% 95.9% */
+    --accent-foreground: #18181b; /* 240 5.9% 10% */
+    --destructive: #ef4444; /* aproximado a partir de 0 84.2% 60.2% */
+    --destructive-foreground: #fafafa; /* 0 0% 98% */
+    --border: #e4e4e7; /* aproximado a partir de 240 5.9% 90% */
+    --input: #f3f3f3; /* 240 5.9% 90% */
+    --ring: #18181b; /* 240 5.9% 10% */
     --logo: #334155;
     --input-text: #797979;
+    --card-app: #f8f9fe;
   }
 
   .dark:root {
-    --background: #373738;
-    --purple-primary: #6363F2; /* aproximado a partir de hwb(239, 39%, 5%) */
-    --foreground: #FAFAFA; /* 0 0% 98% */
-    --card: #09090B; /* 240 10% 3.9% */
-    --card-foreground: #FAFAFA; /* 0 0% 98% */
-    --popover: #09090B; /* 240 10% 3.9% */
-    --popover-foreground: #FAFAFA; /* 0 0% 98% */
-    --primary: #FAFAFA; /* 0 0% 98% */
-    --primary-foreground: #18181B; /* 240 5.9% 10% */
-    --secondary: #27272A; /* aproximado a partir de 240 3.7% 15.9% */
-    --secondary-foreground: #FAFAFA; /* 0 0% 98% */
-    --muted: #27272A; /* 240 3.7% 15.9% */
-    --muted-foreground: #A1A1AA; /* aproximado a partir de 240 5% 64.9% */
-    --accent: #27272A; /* 240 3.7% 15.9% */
-    --accent-foreground: #FAFAFA; /* 0 0% 98% */
-    --destructive: #DC2828; /* aproximado a partir de 0 72% 51% */
-    --destructive-foreground: #FAFAFA; /* 0 0% 98% */
-    --border: #27272A; /* 240 3.7% 15.9% */
-    --input: #434343; /* 240 3.7% 15.9% */
-    --ring: #D4D4D8; /* aproximado a partir de 240 4.9% 83.9% */
-    --logo: #EEF2FF;
-    --input-text: #BBBBBB;
+    --background: #292e32;
+    --purple-primary: #6363f2; /* aproximado a partir de hwb(239, 39%, 5%) */
+    --foreground: #fafafa; /* 0 0% 98% */
+    --card: #09090b; /* 240 10% 3.9% */
+    --card-foreground: #fafafa; /* 0 0% 98% */
+    --popover: #09090b; /* 240 10% 3.9% */
+    --popover-foreground: #fafafa; /* 0 0% 98% */
+    --primary: #fafafa; /* 0 0% 98% */
+    --primary-foreground: #18181b; /* 240 5.9% 10% */
+    --secondary: #27272a; /* aproximado a partir de 240 3.7% 15.9% */
+    --secondary-foreground: #fafafa; /* 0 0% 98% */
+    --muted: #27272a; /* 240 3.7% 15.9% */
+    --muted-foreground: #a1a1aa; /* aproximado a partir de 240 5% 64.9% */
+    --accent: #27272a; /* 240 3.7% 15.9% */
+    --accent-foreground: #fafafa; /* 0 0% 98% */
+    --destructive: #dc2828; /* aproximado a partir de 0 72% 51% */
+    --destructive-foreground: #fafafa; /* 0 0% 98% */
+    --border: #27272a; /* 240 3.7% 15.9% */
+    --input: #32393e; /* 240 3.7% 15.9% */
+    --ring: #d4d4d8; /* aproximado a partir de 240 4.9% 83.9% */
+    --logo: #eef2ff;
+    --input-text: #bbbbbb;
+    --card-app: #32393e;
   }
 }
