cria pagina de execução de quizzes com dados mockados

--- a/global.css
+++ b/global.css
@@ -56,6 +56,6 @@
     --input-text: #bbbbbb;
     --card-app: #32393e;
     --text-purple: #4338ca;
-    --border-color: #d4d6dd;
+    --border-color: #9b9c9e;
   }
 }
